k8s/base/graphql/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: graphql
spec:
  selector:
    matchLabels:
      app: graphql
  template:
    metadata:
      labels:
        app: graphql
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "5050"
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: graphql
          image: shokohsc/moleculer-ouistity
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          args:
            - services/graphql-gateway.service.js
          ports:
            - name: http
              containerPort: 7000
              protocol: TCP
            - name: metrics
              containerPort: 5050
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /.well-known/apollo/server-health
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 1000m
              memory: 64M
