k8s/base/graphql/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: graphql
  labels:
    app: graphql
spec:
  type: ClusterIP
  ports:
    - port: 7000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: graphql
