k8s/base/graphql/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apollo
spec:
  rules:
  - host: apollo.svc.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: graphql
            port:
              number: 7000
